--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,7 @@ html, body {
   text-align: center;
 
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 section {
