--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,10 @@ h1, p {
   margin-bottom: 0.5rem;
 }
 
+p {
+  max-width: 600px;
+}
+
 @media (prefers-color-scheme: dark) {
   html, body {
     background: #111;
